[gd_scene load_steps=7 format=3 uid="uid://pc8xyifyqa27"]

[ext_resource type="Script" path="res://interface/scripts/ChangeScene.gd" id="1_27lod"]
[ext_resource type="Texture2D" uid="uid://c8v0p52ajxo2l" path="res://interface/sprites/VectorBlack.png" id="2_gk313"]
[ext_resource type="Texture2D" uid="uid://dachm60mvxty8" path="res://interface/sprites/VectorRed.png" id="3_myf0b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwvtl"]
bg_color = Color(0.658824, 0.658824, 0.658824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsgfk"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vyct"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="PresetsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27lod")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dwvtl")

[node name="Presets" type="Control" parent="."]
anchors_preset = 0
offset_left = 560.0
offset_top = 40.0
offset_right = 1360.0
offset_bottom = 1040.0

[node name="PresetsPanel" type="Panel" parent="Presets"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 1000.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vsgfk")

[node name="HeadingPresetsPanel" type="Label" parent="Presets"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Готовые пресеты"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Presets"]
layout_mode = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 720.0
offset_bottom = 900.0

[node name="VBoxContainer" type="VBoxContainer" parent="Presets/ScrollContainer"]
layout_mode = 2

[node name="YourPresetButton" type="Button" parent="Presets"]
layout_mode = 0
offset_left = 190.0
offset_top = 920.0
offset_right = 590.0
offset_bottom = 958.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0, 0, 0.482353)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_7vyct")
theme_override_styles/hover = SubResource("StyleBoxFlat_7vyct")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7vyct")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7vyct")
theme_override_styles/focus = SubResource("StyleBoxFlat_7vyct")
text = "+ Собрать самому"

[node name="ReturnButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 87.0
offset_bottom = 71.0
scale = Vector2(1.5, 1.5)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_gk313")
texture_pressed = ExtResource("3_myf0b")
texture_hover = ExtResource("3_myf0b")
texture_disabled = ExtResource("3_myf0b")
texture_focused = ExtResource("3_myf0b")

[connection signal="pressed" from="Presets/YourPresetButton" to="." method="on_change_scene_pressed" binds= [2]]
[connection signal="pressed" from="ReturnButton" to="." method="on_change_scene_pressed" binds= [0]]
